# PRS_ConvexHull2D

./: .gitignore  PRS_ConvexHull2D.sln
PRS_ConvexHull2D/: CMakeLists.txt  PRS_ConvexHull2D.vcxproj  PRS_ConvexHull2D.vcxproj.filters  main_seq.cpp  main_seq_circle.cpp  main_seq_examples.cpp  ompSIMD.cpp  quickHullOpenMP.cpp  quickHullSIMD.cpp
PRS_ConvexHull2D/x64/Debug/: PRS_ConvexHull2D.exe.recipe  PRS_ConvexHull2D.ilk  vc143.idb
PRS_ConvexHull2D/x64/Debug/PRS_ConvexHull2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PRS_ConvexHull2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PRS_ConvexHull2D/x64/Release/: PRS_ConvexHull2D.exe.recipe  PRS_ConvexHull2D.iobj  PRS_ConvexHull2D.ipdb
PRS_ConvexHull2D/x64/Release/PRS_ConvexHull2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PRS_ConvexHull2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
